tree-sitter-anthill/grammar.js
    source_file: $ => repeat($._top_level),

    _top_level: $ => choice(
      $._declaration,
    ),

    // =========================================================
    // Kernel declarations
    // =========================================================

    // WI-853: `import` is admitted HERE as well as inside a namespace / sort
    // body. A file's top level IS a scope — the `<global>` one every top-level
    // `sort` / `fact` / `rule` is defined in — and an import is how names enter
    // a scope; admitting the declarations but not the import that feeds them was
    // an asymmetry with no rule behind it. It is what makes `anthill query -i`
    // work: the flag supplies an import to the query's `<global>` scope, and
    // there is no namespace to put it in.
    _body_sort: $ => choice(
      seq('{', repeat($._sort_content), '}'),
      seq(repeat($._sort_content), 'end', optional($.name)),
    ),

    abstract_sort: $ => seq(
      repeat(field('description', $.description_block)),
      optional($.visibility),
      'sort',
      field('name', $.name),
      '=',
      field('definition', $._type),
      optional($.meta_block),
    ),

    sort_with_body: $ => seq(
      repeat(field('description', $.description_block)),
      optional($.visibility),
      'sort',
      field('name', $.name),
      // WI-451 (§5.4): operation-style enclosing type-param list AFTER the name
      // — `sort CpsMonad[F[T]]`. Each param is a NON-RIGID type variable; a
      // higher-kinded param carries its own bracketed member (`F[T]`). Like an
      // `operation_type_param_list` in position, but a param may be HK (`F[T]`),
      // which that flat list cannot express. Convert desugars it into marked
      // body items.
      optional($.sort_type_param_list),
      $._body_sort,
      optional($.meta_block),
    ),

    // WI-451 (§5.4 non-rigid type-variable marker). A sort's type-parameter
    // binders, after the name, op-style: `[F[T], A, B]`. A param is either SIMPLE
    // (`A`, desugars to `sort A = ?`) or HIGHER-KINDED (`F[T]`, a binder that
    // itself carries a bracketed member — the one shape the flat
    // `operation_type_param_list` lacks). Recursive: the member list reuses this
    // rule. No `= default` form — sort-param defaults are undefined by §5.4 (the
    // examples are bare `[F[T]]` / `[A, B]`); a defaulted sort is the `sort X = T`
    // body form.
    enum_declaration: $ => seq(
      repeat(field('description', $.description_block)),
      optional($.visibility),
      'enum',
      field('name', $.name),
      $._body_enum,
      optional($.meta_block),
    ),

    _body_enum: $ => choice(
      seq('{', repeat($._enum_content), '}'),
      seq(repeat($._enum_content), 'end', optional($.name)),
    ),

    field_decl: $ => seq(
      field('name', $.identifier),
      ':',
      field('type', $._type),
    ),

    // =========================================================
    // Rule
    // =========================================================

    // A rule has body (premises after `:-`) and optional conclusion
    // (after `-:`). Without `-:`, the rule is "violation-shape" —
    // a refutation target whose body must be unsat for the proof to
    // discharge. With `-:`, the rule is a positive theorem of the
    // form `∀ vars. premises ⇒ conclusion`. Z3 discharge negates the
    // conclusion (`assert (not (and conclusion)); check-sat`); the
    // `using` clause's lift step emits the implication directly.
    //
    // The two arrows `:-` and `-:` are mirror surface forms of the same
    // implication operator (see proposal 032). Exactly one of them
    // appears per rule (or neither, for a fact); the dual-arrow form
    // `head :- body -: conclusion` no longer exists.
    //
    // Heads are comma-separated for conjunctive multi-head sugar:
    // `H1, H2 :- B` desugars at load time to two Horn rules sharing
    // body B. `⊥` may appear only as a sole head (denial); it cannot
    // be mixed with positive heads.
    rule_body: $ => commaSep1($._goal),

    // A goal: the cut control primitive `!`, the goal-position `let ?v = expr`
    // binding (proposal 049), or a regular `_term`. Shared by `rule_heads` and
    // `rule_body` so their comma-lists parse identically (no GLR split between
    // heads and body). Both `let_binding` and `cut` are meaningful only in a
    // body; the converter lowers a body `let` to `?v <=> expr` (unify) and a
    // body `!` to a `cut` goal, and rejects either in head position (loud).
    _goal: $ => choice($.cut, $.let_binding, $._term),

    // Cut (`!`) — kernel control primitive (proposal 033.1 / WI-568). A standalone
    // `!` goal that commits to the current rule invocation. Distinct from the
    // prefix `!`/`not` operator (`prefix_term`), which is `! <atom>`: a `!` with
    // no following operand is a cut, a `!` applied to an atom is negation. The
    // two overlap on the leading `!` token, so they are declared as a GLR
    // conflict (`[$.cut, $.prefix_term]`) and resolved by lookahead — only the
    // production whose continuation parses survives.
    operation_declaration: $ => seq(
      repeat(field('description', $.description_block)),
      optional($.visibility),
      'operation',
      field('name', $.name),
      optional($.operation_type_param_list),
      '(',
      optional(commaSep1($.param)),
      ')',
      '->',
      field('return_type', $._type),
      repeat($.operation_clause),
      optional(seq('=', choice(
        seq('{', field('body', $._expr_body), '}'),
        field('body', $._expr_body),
      ))),
      optional($.meta_block),
    ),

    // Distinct CST node from `sort_binding` even though tokens coincide —
    // this declares operation-local logical variables, not bindings of
    // sort parameters at an instantiation site.
    param: $ => seq(
      optional(field('rest', token('...'))),
      field('name', $.identifier),
      ':',
      field('type', $._type),
    ),

    operation_clause: $ => choice(
      $.requires_clause,
      $.ensures_clause,
      $.effects_clause,
    ),

    // WI-20260915-G9EA9 retired WI-087's `meta [..]` operation clause. The keyword
    // existed only because a bare `[...]` after the return type was grabbed as
    // return-type application args (`-> Vec3[...]`); the `@[` token that opens every
    // `meta_block` cannot continue a type, so an operation's block trails the
    // declaration like every other declaration's.

    // =========================================================
    // Const (proposal 039 — term-level named constants, WI-084)
    // =========================================================

    // A named, typed value. Carrier-independent and monomorphic BY DESIGN — no
    // params, no type-params, no effects clause: the declared type is MANDATORY
    // (`: Type` is part of the name's contract), the body OPTIONAL (`= expr`;
    // absent for a host-supplied value whose source is a registered reflect fn).
    // Modeled on `operation_declaration`'s description / visibility / optional-
    // braced-body shape and slotted into the same `_namespace_content` /
    // `_sort_content` positions. `const` is a soft keyword (only in this leading
    // declaration position), per §2.5.
    requires_declaration: $ => seq(
      'requires',
      optional(seq(field('binder', $.identifier), ':')),
      field('type', $._type),
    ),

    // WI-448: a trailing `requires` after an operation's return type is the
    // operation's clause (op-scoped), NOT a standalone `requires_declaration`
    // (which is sort/namespace-scoped). Both begin with the `requires` token,
    // so the GLR conflict `[$.operation_declaration]` (above) explores both
    // parses. Their costs are otherwise equal, and a comment (line or block)
    // preceding the operation tips the tie toward the standalone declaration —
    // silently re-scoping the clause's names (e.g. op-type-params) to the
    // enclosing namespace. `prec.dynamic` breaks the tie deterministically
    // toward the op-clause, matching the comment-free behavior regardless of
    // any preceding comment.
    // (`ensures` has no standalone form, so it needs no bias.)
    requires_clause: $ => prec.dynamic(1, seq('requires', $.requires_body)),
    // WI-840: an op-scoped `requires` list is OVERLOADED — one comma list carries
    // both spec requirements (`requires Eq[T]`, WI-448) and VALUE preconditions
    // (`requires neq(b, 0)`, WI-539) — and the §4.7 binder attaches only to the
    // TYPE flavor, so it must be admissible at any position of that same list
    // (`requires plus: Monoid[T], neq(b, 0)` and the reverse both parse).
    //
    // Its own production rather than an extra `_goal` alternative: `_goal` is
    // shared by `rule_body` / `rule_heads` / constraint and quantifier bodies,
    // where a `name: Type` item would be accepted and then have nowhere to go —
    // a silent drop of exactly the WI-839 class. `requires_body` is otherwise
    // `rule_body` verbatim, so a binder-free clause converts identically.
    ensures_clause: $ => seq('ensures', $.rule_body),
    effects_clause: $ => seq('effects', $._effect_set),

    // Effect set — single effect type or braced list. Shared between
    // `effects_clause` (operation declarations) and the arrow-type
    // `@` annotation.
    //
    // The single-effect form rejects type variants that begin with `(`
    // (tuple_type, arrow_type) — neither is meaningful as an effect.
    // Accepting them would let a malformed clause like
    // `effects (Modify self)` (a common typo for `Modify[self]`)
    // consume the `(` as the start of an arrow/tuple type and cascade
    // error recovery across the enclosing sort body. With `(` rejected
    // up-front the parser fails at the bad token and resyncs at the
    // next clause keyword.
    // WI-440: `commaSep` (not `commaSep1`) so the explicit closed-empty row
    // `{}` parses — previously `@ {}` failed the braced form and error-
    // recovered into a zero-width `simple_type` (an empty-name unresolved-
    // symbol warning downstream, with the annotation silently dropped).
    _effect_set: $ => choice(
      $._effect_type,                                   // single: E
      seq('{', commaSep($._effect_type), '}'),          // braced: {A, B} / {}
    ),

    // WI-327: extended `_effect_type` admits the proposal-045 surface
    // algebra — explicit `+E` presence, `-E` absence (lacks-constraint,
    // v1b consumer), and `merge(E1, …, En)` union (sugar for the braced
    // set form, allowing nested effect-expressions).
    entity_declaration: $ => seq(
      repeat(field('description', $.description_block)),
      optional($.visibility),
      'entity',
      field('name', $.name),
      optional(seq('(', commaSep1($.field_decl), ')')),
      optional($.meta_block),
    ),

    operation_entry: $ => seq(
      repeat(field('description', $.description_block)),
      optional($.visibility),
      field('name', $.name),
      optional($.operation_type_param_list),
      '(',
      optional(commaSep1($.param)),
      ')',
      '->',
      field('return_type', $._type),
      repeat($.operation_clause),
      optional(seq('=', choice(
        seq('{', field('body', $._expr_body), '}'),
        field('body', $._expr_body),
      ))),
      optional($.meta_block),
    ),

    _atom_term: $ => choice(
      $._non_name_atom_term,
      prec(-1, $.name),
      prec(-1, $.absolute_name),
    ),

    // Every atom whose head is not a bare/dotted `name` path. This is exactly
    // the set a `field_access` object (dot receiver) may take; keeping it as a
    // shared rule guarantees the receiver set never drifts from `_atom_term`
    // when a new atom kind is added.
    variable_term: $ => choice(
      $.variable,
      seq(
        $.variable,
        repeat1(field('description', $.description_block)),
        '?'
      ),
    ),

    // ? = anonymous variable (each occurrence distinct, like _ in Prolog)
    // ?name = named variable (shared within scope)
    // Single token: ?name must be written without whitespace.
    variable: $ => token(seq('?', optional(/[a-zA-Z_][a-zA-Z0-9_-]*/))),

    // The functor excludes the fully-dotted `name` rule so that
    // bare `p.x` in argument position reduces to field_access
    // instead of being eaten as a nested fn_term name. The `(`
    // after field_access is the disambiguator with $._atom_term.
    // For `Name[bindings]` callees, the same trailing-token rule
    // splits: `(` → typed call, `.` → sort companion, neither → bare
    // instantiation term.
    fn_term: $ => seq(
      field('name', choice(
        $.name,
        $.absolute_name,
        $.field_access,
        $.variable,
        $.application,
        $.dot_application,
      )),
      '(',
      commaSep(choice($._fn_arg, $.rest_arg)),
      ')',
    ),

    // WI-1129 (proposal 056 §2.3) — the RULE-HEAD REST PATTERN: `rule fix(?r,
    // ...?args) <=> fix_of(?r, ?args) @[simp]`. The variadic-capture peer of the
    // `param` rule's `...args: R` marker, on the OTHER dispatch face — where the
    // operation face hands the callee a record VALUE (whose component types erase
    // the arguments, kernel spec §4.5 "no singleton types"), this binds the
    // leftover named arguments as one record OCCURRENCE a `@[simp]` macro reads as
    // SYNTAX, labels and all.
    //
    // The SAME fused `token('...')` the `param` rule carries, so it diverges at the
    // lexer from `.` / `.(` / `A.B` exactly as the distribute-dot does. Admitted on
    // `fn_term` alone rather than inside `_fn_arg` — `_fn_arg` is shared with
    // `tuple_literal` and the spec-rule arg list, neither of which has a residue to
    // capture; a rule head IS a `fn_term`, so this is the narrowest position that
    // reaches it. WHERE a `...` is legal within a call is not a grammar question
    // (a rule head and an operation-body call are the same `fn_term`), so the
    // converter refuses every non-head position (`claim_rule_head_captures`).
    _expr_body: $ => choice(
      $.match_expr,
      $.if_expr,
      $.let_chain,
      $.lambda_expr,
      $.proof_statement,
      $._term,
    ),

    _type: $ => choice(
      $._spec_instantiation,
      $.tuple_type,
      $.arrow_type,
    ),

    // The forms that can NAME A SPEC: a bare name, an applied one, or a type variable.
    // One owner, because three positions want exactly this set — `provides`' spec and
    // its `:- goals` conditions (WI-869), and the first three arms of `_type` and
    // `_effect_type`, which spelled it out a third and fourth time. A new spec-position
    // form added to one copy and not the others is a silent omission.
    //
    // NOT used for `provides_block`'s spec or for `requires_declaration`'s type,
    // deliberately: both would be correct restrictions by this same argument, but the
    // house style is parse-permissive / convert-strict (WI-763 — "a located 'not a
    // type' beats a bare syntax error"), and neither has a conflict forcing the
    // narrowing. `provides_clause` does.
    simple_type: $ => choice($.name, $.absolute_name),

    // WI-311: unified type/term application — `Name[bindings]`. Merges the
    // former parameterized_type (type position) and instantiation_term (term
    // position) into one node; the converter classifies type-vs-term by
    // position, the loader by SymbolKind. The base is the dotted `$.name` so
    // fully-qualified parameterized types parse (`scala.prelude.List[Int]`).
    // No precedence: it carried a prec(1) to shift into this bracket rather than
    // reduce the name and read `[…]` as a trailing `meta_block`. Since
    // WI-20260915-G9EA9 a block opens with `@[`, and generation reports no conflict
    // without it.
    identifier: $ => reserved('none', $._identifier_token),

    integer_literal: $ => /-?[0-9]+/,
